samples/_failures_safe/1761404001_8379ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf040e73.c: In function ‘tokenize’:
./samples/SAFE/__tmp_bf040e73.c:163:9: error: expected expression at end of input
  163 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_bf040e73.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf040e73.c:163:9: error: expected declaration or statement at end of input
